src/test/deca/context/invalid/method-notSubtype.deca
class A{	
	A call() {}
}

class B extends A{
	Object call() {}
}
